--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -173,8 +173,10 @@
               class="font_side">Catálogo de Artículos</span></a>
 
 
-          <a mat-list-item [routerLink]="['/asesores/articulosimagenes/']" routerLinkActive="active-list-item"><span
-              class="font_side">Test Artic con Imagen</span></a>
+          <a mat-list-item [routerLink]="['/asesores/articulosimagenes/']" routerLinkActive="active-list-item"
+            *ngIf="sTipo=='G' && sCodigo==99">
+            <span class="font_side">(Test)Artic con Imagen</span>
+          </a>
 
 
         </div>
